--- a/views/admin/forms/catogoryupdateform.ejs
+++ b/views/admin/forms/catogoryupdateform.ejs
@@ -6,6 +6,7 @@
         <label for="exampleInputName1">Name</label>
         <input name="name" type="text" class="form-control" id="updatename" placeholder="Name" >
         <small id="nameError" class="text-danger" style="display: none;">Name is required</small>
+        <p id="errorcatognameupdate" class="text-danger" style="display: none;"></p>
       </div>
       <div class="form-group">
         <label for="exampleInputName1">Description</label>
